[Java X Action] Align with updated repo and polish a bit